--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "less": "^3.12.2",
     "next": "9.5.3",
