--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.11"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.1",
+    "typescript": "^4.0.3"
   }
 }
